# jl-glove

./: .envrc  .gitignore  README.md  mkdocs.yaml  pyproject.toml
.azure-pipelines/: cg.yaml
.devcontainer/: devcontainer.json  on-create.sh
.github/actions/setup-environment/: action.yaml
.github/workflows/: auto-merge.yaml  auto-merge.yml  build-docs.yaml  build-wheels.yaml  checks.yaml  codeql.yaml  main.yaml  pr.yaml  release.yaml
data/300.535186.parquet/: part.18.parquet  part.19.parquet  part.25.parquet  part.27.parquet  part.5.parquet
docs/: index.md
src/jlglove/: __init__.py
src/jlglove/cli/: __init__.py  __main__.py  _app.py
src/jlglove/rep/: __init__.py  _compute_jl.py  _custom_callbacks.py  _custom_dataset.py  _glove_lightning_model.py  _synthetic_data.py
src/jlglove_resources/: __init__.py
src/jlglove_resources/embeddings/: __init__.py
src/jlglove_resources/rep/100.535186.parquet/: part.0.parquet  part.1.parquet  part.2.parquet  part.3.parquet  part.4.parquet  part.5.parquet  part.6.parquet  part.7.parquet  part.8.parquet  part.9.parquet
src/jlglove_resources/rep/300.535186.parquet/: part.0.parquet  part.1.parquet  part.10.parquet  part.11.parquet  part.12.parquet  part.13.parquet  part.14.parquet  part.15.parquet  part.16.parquet  part.17.parquet  part.2.parquet  part.20.parquet  part.21.parquet  part.22.parquet  part.23.parquet  part.24.parquet  part.26.parquet  part.28.parquet  part.29.parquet  part.3.parquet  part.4.parquet  part.6.parquet  part.7.parquet  part.8.parquet  part.9.parquet
