[project]
name = "jl-glove"
version = "0.1.0"
description = ""
authors = [
    {name = "Paidamoyo Chapfuwa",email = "pchapfuwa@microsoft.com"}
]
packages = [
    { include = "jlglove", from = "src" },
    { include = "jlglove_resources", from = "src" },
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
